<resources>
    <string name="app_name">testing</string>
    <string name="the">The</string>
    <string name="edenvale">Edenvale</string>
    <string name="bowling_club">Bowling Club</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_as_guest">Login As Guest</string>
    <string name="register_button">Register</string>
    <string name="Name_hint">Name</string>
    <string name="Surname_hint">Surname</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone Number</string>
    <string name="birthday_hint">Birth date</string>
    <string name="prefName_hint">Preferred name</string>
    <string name="welcome_to">Welcome to</string>
    <string name="quiz_night">Quiz night!</string>
    <string name="enter_code">Enter code</string>
    <string name="time_remaining">Time remaining:</string>
    <string name="question">Question... At vero eos et accusamus et iusto odio dignissimos?</string>
    <string name="submit">Submit</string>
    <string name="perspiciatis">perspiciatis</string>
    <string name="notification">notification</string>
    <string name="profile">profile</string>
    <string name="home">home</string>
    <string name="bar">Bar</string>
    <string name="bar_menu">Bar menu</string>
    <string name="basic">Basic</string>
    <string name="basic_information">Basic Information</string>
    <string name="unName"> <u>Name</u>: </string>
    <string name="change"> <u>Change</u> </string>
    <string name="surname"> <u>Surname</u>: </string>
    <string name="u_username_u"> <u>Username</u>: </string>
    <string name="u_password_u"> <u>Password</u>: </string>
    <string name="u_email_u"> <u>Email</u>: </string>
    <string name="u_age_u"> <u>Birthdate</u>: </string>
    <string name="age">Age</string>
    <string name="coupon">coupon</string>
    <string name="coupons">Coupons</string>
    <string name="exp_dd_mm_yy">exp: dd/mm/yy</string>
    <string name="details">Details</string>
    <string name="use_coupon">Use coupon</string>
    <string name="preferences">Preferences</string>
    <string name="u_preferred_name_u"> <u>Preferred name</u>: </string>
    <string name="noti"> Notification </string>
    <string name="create"> Create new button </string>
    <string name="ingredients">Ingredients</string>
    <string name="price">Price</string>
    <string name="create_quiz">Create quiz</string>
    <string name="create_new">Create new quiz</string>
    <string name="description">Description</string>
    <string name="create_button">Create</string>
    <string name="questionstr">Questions</string>
    <string name="id">ID</string>
    <string name="question_b"> <b>Question:</b> </string>
    <string name="answer_b"> <b>Answer:</b> </string>
    <string name="answer_b2"> <b>Incorrect Answer1:</b> </string>
    <string name="answer_b3"> <b>Incorrect Answer2:</b> </string>
    <string name="answer_b4"> <b>Incorrect Answer3:</b> </string>
    <string name="length_b"> <b>Seconds:</b> </string>
    <string name="delete">Delete</string>
    <string name="add_quest">Add question</string>
    <string name="answer">Answer</string>
    <string name="other_ans"> <b>Other answers (optional):</b> </string>
    <string name="leng">Length</string>
    <string name="add_image"> <b>Add image (optional):</b> </string>
    <string name="selected_image">Selected image</string>
    <string name="select_image">Select Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="log_out">Log out</string>
    <string name="drinks"> <b>Drinks</b> </string>
    <string name="food"> <b>Food</b> </string>
    <string name="start_quiz">Start quiz</string>
</resources>