<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_blue"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/freeman_regular"
            android:text="@string/the"
            android:textAlignment="center"
            android:textColor="@color/text_gold"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/freeman_regular"
            android:text="@string/edenvale"
            android:textAlignment="center"
            android:textColor="@color/text_gold"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brittany_signature"
            android:text="@string/bowling_club"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/text_gold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/body_blue"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutHeader">


        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:padding="10dp"
            android:paddingVertical="60dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingVertical="60dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <!-- Login Button -->
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="75dp"
            android:background="@drawable/rounded_button"
            android:padding="10dp"
            android:text="@string/login_button"
            android:textColor="@color/body_blue"
            android:textStyle="bold" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:orientation="horizontal">

            <!-- Register Button -->
            <Button
                android:id="@+id/buttonRegister"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:padding="10dp"
                android:text="@string/register_button"
                android:textColor="@color/body_blue"
                android:textStyle="bold" />

            <!-- Login as Guest Button -->
            <Button
                android:id="@+id/buttonLoginAsGuest"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:padding="10dp"
                android:text="@string/login_as_guest"
                android:textColor="@color/body_blue"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>