<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/linearLayoutHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/header_blue"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/freeman_regular"
                    android:text="@string/the"
                    android:textAlignment="center"
                    android:textColor="@color/text_gold"
                    android:textSize="45sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/freeman_regular"
                    android:text="@string/edenvale"
                    android:textAlignment="center"
                    android:textColor="@color/text_gold"
                    android:textSize="45sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/brittany_signature"
                    android:text="@string/bowling_club"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="40sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:background="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/text_gold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:background="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="723dp"
                android:background="@color/body_blue"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent">


                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/Name_hint"
                    android:inputType="text"
                    android:padding="10dp"
                    android:paddingVertical="60dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <EditText
                    android:id="@+id/editTextSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/Surname_hint"
                    android:inputType="text"
                    android:padding="10dp"
                    android:paddingVertical="60dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:paddingVertical="60dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <EditText
                    android:id="@+id/editTextPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/phone_hint"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:paddingVertical="60dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <EditText
                    android:id="@+id/editTextBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/birthday_hint"
                    android:inputType="date"
                    android:padding="10dp"
                    android:paddingVertical="60dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <EditText
                    android:id="@+id/editTextPreferred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/prefName_hint"
                    android:inputType="text"
                    android:padding="10dp"
                    android:paddingVertical="60dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:paddingVertical="60dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <!-- register Button -->
                <Button
                    android:id="@+id/buttonRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="75dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="75dp"
                    android:background="@drawable/rounded_button"
                    android:padding="10dp"
                    android:text="@string/register_button"
                    android:textColor="@color/body_blue"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
