<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutDynamicButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/linearLayoutBodyNotifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/body_blue"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewNotName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/merriweather_regular"
                android:text="@string/Name_hint"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/merriweather_regular"
                android:text="@string/exp_dd_mm_yy"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/merriweather_regular"
            android:text="@string/details"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="0dp"
            android:background="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>